--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -42,9 +42,8 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.linkedin.com/in/parag-khodke-66229979/">
-                        <img src="{% static 'blog/images/l.png' %}" width="32" height="32" alt="">
-                    </a>
+                    <a class="nav-link" href="https://www.linkedin.com/in/parag-khodke-66229979/"> <img src="{% static 'blog/images/l.png' %}" width="32" height="32" alt="">
+                    Facebook</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://twitter.com/home">
