--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,7 +17,7 @@
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="{% url 'home' %}">
-            <img src="{% static 'blog/images/p.png' %}" width="150" height="80" alt="">
+            <img src="{% static 'blog/images/p.png' %}" width="150" height="80" alt="Home">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,16 +38,17 @@
             <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link" href="https://www.facebook.com/parag.khodke.35">
-                        <img src="{% static 'blog/images/f.png' %}" width="32" height="32" alt="">
+                        <img src="{% static 'blog/images/f.png' %}" width="32" height="32" alt="Facebook">
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.linkedin.com/in/parag-khodke-66229979/"> <img src="{% static 'blog/images/l.png' %}" width="32" height="32" alt="">
+                    <a class="nav-link" href="https://www.linkedin.com/in/parag-khodke-66229979/">
+                        <img src="{% static 'blog/images/l.png' %}" width="32" height="32" alt="Linkedin">
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://twitter.com/home">
-                        <img src="{% static 'blog/images/t.png' %}" width="32" height="32" alt="">
+                        <img src="{% static 'blog/images/t.png' %}" width="32" height="32" alt="Twitter">
                     </a>
                 </li>
             </ul>
