--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,4 +1,3 @@
-{% load static %}
 
 <!doctype html>
 <html lang="en">
@@ -14,10 +13,11 @@
     <title>Blog Website</title>
 </head>
 <body>
+{% load static %}
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="{% url 'home' %}">
-            <img src="{% static 'blog/images/p.png' %}" width="150" height="80" alt="Home">
+            <img src="{% static 'blog/images/p.png' %}" width="150" height="80" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,17 +38,17 @@
             <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link" href="https://www.facebook.com/parag.khodke.35">
-                        <img src="{% static 'blog/images/f.png' %}" width="32" height="32" alt="Facebook">
+                        <img src="{% static 'blog/images/f.PNG' %}" width="32" height="32" alt="">
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://www.linkedin.com/in/parag-khodke-66229979/">
-                        <img src="{% static 'blog/images/l.png' %}" width="32" height="32" alt="Linkedin">
+                        <img src="{% static 'blog/images/l.png' %}" width="32" height="32" alt="">
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://twitter.com/home">
-                        <img src="{% static 'blog/images/t.png' %}" width="32" height="32" alt="Twitter">
+                        <img src="{% static 'blog/images/t.png' %}" width="32" height="32" alt="">
                     </a>
                 </li>
             </ul>
