--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -47,7 +47,7 @@
     <main role="main">
         <section class="jumbotron text-center">
             <div class="container">
-                <h1 class="jumbotron-heading">WelCome To BLog Site</h1>
+                <h1 class="jumbotron-heading">Welcome To lLog Site</h1>
                 <p class="lead text-muted">“That which does not kill us, makes us stronger.”Friedrich Nietzsche.</p>
                 <p>
                     <a href="{% url 'contacts' %}" class="btn btn-primary my-2">Contact me</a>
